--- a/src/app/admin/bedrijven/add-bedrijf/add-bedrijf.component.html
+++ b/src/app/admin/bedrijven/add-bedrijf/add-bedrijf.component.html
@@ -8,7 +8,26 @@
           <input matInput type="text" formControlName="naam" />
         </mat-form-field>
         <control-messages [control]="addBedrijfForm.get('naam')" class="errorMessage"></control-messages>
+
+        <mat-form-field class="formfield">
+          <mat-label>Adres</mat-label>
+          <input matInput type="text" formControlName="adres" />
+        </mat-form-field>
+        <control-messages [control]="addBedrijfForm.get('adres')" class="errorMessage"></control-messages>
+
+        <mat-form-field class="formfield">
+          <mat-label>BTW-Nummer</mat-label>
+          <input matInput type="text" formControlName="btwNummer" />
+        </mat-form-field>
+        <control-messages [control]="addBedrijfForm.get('btwNummer')" class="errorMessage"></control-messages>
+
+        <mat-form-field class="formfield">
+          <mat-label>Email</mat-label>
+          <input matInput type="text" formControlName="email" />
+        </mat-form-field>
+        <control-messages [control]="addBedrijfForm.get('email')" class="errorMessage"></control-messages>
       </div>
+
       <button class="button" mat-raised-button color="primary" type="submit" [disabled]="!addBedrijfForm.valid">Voeg
         bedrijf toe</button>
     </form>
