--- a/src/app/admin/leveringen/leveringen/leveringen.component.html
+++ b/src/app/admin/leveringen/leveringen/leveringen.component.html
@@ -12,7 +12,7 @@
                 <mat-label>Enter a date range</mat-label>
                 <mat-date-range-input [formGroup]="range" [rangePicker]="picker">
                     <input matStartDate formControlName="start" placeholder="Start date">
-                    <input matEndDate (dateChange)="getLeveringen()" formControlName="end" placeholder="End date">
+                    <input matEndDate (dateChange)="getLeveringenByDateRange()" formControlName="end" placeholder="End date">
                 </mat-date-range-input>
                 <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
                 <mat-date-range-picker #picker></mat-date-range-picker>
