--- a/src/app/user/eigen-planning/eigen-planning.component.scss
+++ b/src/app/user/eigen-planning/eigen-planning.component.scss
@@ -1,30 +1,28 @@
-#container{
-  width: 85%;
-  margin: 15px auto;
+#container {
+    width: 85%;
+    margin: 15px auto;
 }
 
-.dataCard{
-  width: 350px;
-  height: 100px;
+.dataCard {
+    width: 350px;
+    height: 100px;
 }
 
-.productCard{
-  width: 500px;
-  height: 425px;
-  margin: 15px;
-}
-
-.productCards{
-  background-color: rgba(132, 160, 245, 0.1);
-  margin: 15px 15px 0 0;
-  width: 200px;
+.productCard {
+    width: 500px;
+    height: 425px;
+    margin: 15px;
 }
 
 .example-viewport {
-  height: 500px;
+    height: 500px;
 }
 
-.gridlist{
-  background-color: rgba(220,220,220, 0.3);
-  width: 850px;
+.gridlist {
+    background-color: rgba(220, 220, 220, 0.3);
+    width: 850px;
+}
+
+.leveringContainer {
+    margin-bottom: 25px;
 }
